[package]
name = "nes-wasm"
version = "0.1.0"
edition = "2021"
description = "NES 模擬器 WASM 核心 - 使用 Rust 實作高效能 NES 硬體模擬"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = "symbols"

[profile.dev]
opt-level = 1
